fix split text from wrapping unnaturally

--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -41,7 +41,6 @@
 
         .bio-text {
             font-size: 1.1rem;
-            transition: opacity 0.3s ease-in-out;
         }
 
         .typewriter-text {
